# XSecIoT

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
FIRE_codebase/: 2_Model_training_on_ Session_Time based sliding_Aggregation.ipynb  main.py  models.py  preprocessing.py  preprocessingUNSW.py  simulations.py  simulationsunsw.py
FIRE_codebase/3/: model_K_Nearest_Neighbor.ipynb  model_XGBoost_modified.ipynb  model_decision_tree.ipynb  model_feed_forward.ipynb  model_random_forest.ipynb  model_support_vector_machine.ipynb
FIRE_codebase/JuypterNotebooks/: 1_IoTAttacks__runtime_latency_parallel_processing.ipynb
FIRE_codebase/JuypterNotebooks/3/: model_random_forest.ipynb  model_support_vector_machine.ipynb
datasets/: README.md
datasets/DFAIR/: README.md
fire_notebooks/: model_K_Nearest_Neighbor.ipynb  model_decision_tree.ipynb  model_support_vector_machine.ipynb
fire_notebooks/misc/: Aggregation.ipynb  FLARE_WS5_SS1_Models.ipynb  FLARE_WS5_SS3_Models.ipynb  Sanity_Check_and_EDA  Session_Direction_Time-based_Sliding_Aggregation.ipynb  Session_Time based sliding_Aggregation.ipynb  Session_Time based sliding_Aggregation_withoutSMOTE.ipynb  Untitled0 (1).ipynb  Untitled0.ipynb  Untitled1.ipynb  flare_pca_tsne implementation and comparision.ipynb  model_XGBoost.ipynb  runtime_latency_parallel_processing.ipynb  testing_aggreagation_data_with original.ipynb
src/: README.md
src/FIRE/: README.md  main.py  models.py  preprocessing.py  simulations.py
src/FIRE/JuypterNotebooks/: 1_IoTAttacks__runtime_latency_parallel_processing.ipynb  README.md
src/FIRE/JuypterNotebooks/3/: model_K_Nearest_Neighbor.ipynb  model_XGBoost_modified.ipynb  model_decision_tree.ipynb  model_feed_forward.ipynb  model_random_forest.ipynb  model_support_vector_machine.ipynb
src/core/: README.md  adaptive_chunking.py  ce_model_training.py  ce_simulation.py  circular_logger.py  config.py  listener.py  perf_stats.py  rolling_csv.py  run_sim.sh  run_xseciot.sh  streaming_pipeline.py
src/core/conformalEval/: README.md  adaptive_sig_ctlr.py  approx_cce.py  cce.py  conformal_config.toml  conformal_evaluators.py  ice.py  tce.py  utils.py
src/core/models/: README.md  feedforward_binary.py  mlp_ce.py  torch_device.py
src/utils/: README.md  labeling.py  merge.py  overall_perf_stats.py  overall_stats_scraper.py
tests/: README.md  test_FIRE.py  test_main.py  test_models.py  test_preprocessing.py  test_rolling_logger.py  test_simulations.py  test_xseciot_core.py
xseciot_core/: listenCSV.py  run_xseciot.sh
