[project]
name = "xseciot"
version = "0.1.0"
description = "ML-based IoT intrusion detection with XAI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Seth Barrett", email = "sebarrett@augusta.edu" },
    { name = "Bradley Boswell", email = "brboswell@augusta.edu" },
    { name = "Swarnamugi Rajaganapathy", email = "swarnamugi@dfairlab.com" },
    { name = "Lin Li", email = "lli1@augusta.edu" },
    { name = "Gokila Dorai", email = "gdorai@augusta.edu" }
]
maintainers = [
    { name = "Seth Barrett", email = "sebarrett@augusta.edu" }
]
license = "unlicense"
license-files = ["LICEN[CS]E.*"]

dependencies = [
    "absl-py==2.3.0",
    "argcomplete==3.6.2",
    "astunparse==1.6.3",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dask==2025.5.1",
    "flask==3.1.1",
    "flatbuffers==25.2.10",
    "fonttools==4.58.1",
    "fsspec==2025.5.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "keras==3.10.0",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "lime==0.2.0.1",
    "llvmlite==0.44.0",
    "locket==1.0.0",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "namex==0.1.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "partd==1.4.2",
    "pillow==11.2.1",
    "pip==22.3.1",
    "pipx==1.7.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "protobuf==5.29.5",
    "pyarrow==20.0.0",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "scapy==2.6.1",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "shap==0.47.2",
    "shortuuid>=1.0.13",
    "six==1.17.0",
    "slicer==0.0.8",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.5.26",
    "toml>=0.10.2",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "userpath==1.9.2",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xgboost==3.0.2",
    "zipp==3.22.0",
    "torch==2.8.0",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.uv]
default-groups = ["dev"]
package = false
